kubernetes/apps/envoy-gateway-system/envoy-gateway/app/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway.envoy-gateway-system
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
