kubernetes/apps/envoy-gateway-system/envoy-gateway/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: 192.168.91.65
  listeners:
    - name: http
      protocol: HTTP
      port: 80
