kubernetes/apps/envoy-gateway-system/envoy-gateway/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
spec:
  hostnames: ["flux-webhook.darkfellanetwork.com"]
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
